--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "main": "index.js",
   "author": "nicolaswalcker <walcker_@outlook.com>",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "normalize.css": "^8.0.1"
+  },
+  "devDependencies": {}
 }
