--- a/package.json
+++ b/package.json
@@ -5,7 +5,22 @@
   "main": "index.js",
   "author": "nicolaswalcker <walcker_@outlook.com>",
   "license": "MIT",
+  "prettier": {},
   "dependencies": {
     "normalize.css": "^8.0.1"
+  },
+  "scripts": {
+    "stylelint-check": "stylelint-config-prettier-check"
+  },
+  "devDependencies": {
+    "prettier": "^2.4.1",
+    "stylelint": "^14.0.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended-scss": "^5.0.1",
+    "stylelint-config-sass-guidelines": "^9.0.1",
+    "stylelint-config-standard": "^23.0.0",
+    "stylelint-config-standard-scss": "^2.0.1",
+    "stylelint-order": "^5.0.0",
+    "stylelint-prettier": "^2.0.0"
   }
 }
